// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas sobre el componente <GifExpertApp/> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one punch"
      key="one punch"
    />
    <GifGrid
      category=" dragon Ball"
      key=" dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`pruebas sobre el componente <GifExpertApp/> mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
